--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    font-family: 'Poppins', sans-serif;
 }
 
 .main-nav {
